[package]
name = "rusty_speed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version =  "1.0.188", features = ["derive"]}
quick-xml = { version = "0.30.0", features = ["serialize"] }

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.0.0-rc.4"}